<resources>
    <string name="app_name">A1_Calculator</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="decPoint">.</string>
    <string name="num0">0</string>
    <string name="clear">C</string>
    <string name="backspace">Del</string>
    <string name="opAdd">+</string>
    <string name="opSub">-</string>
    <string name="opMod">%</string>
    <string name="opMul">*</string>
    <string name="opDiv">/</string>
    <string name="opEquals">=</string>
</resources>