<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"-->
<!--        android:orientation="vertical"-->
<!--        android:gravity="fill"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/gridLayout"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->
<!--    </LinearLayout>-->

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:inputType="text"
        android:textSize="55sp"
        android:autofillHints="" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/selectedOp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill" />

        <Button
            android:id="@+id/num1"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/num1" />

        <Button
            android:id="@+id/num2"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/num2" />

        <Button
            android:id="@+id/num3"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/num3" />

        <Button
            android:id="@+id/num4"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/num4" />

        <Button
            android:id="@+id/num5"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/num5" />

        <Button
            android:id="@+id/num6"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/num6" />

        <Button
            android:id="@+id/num7"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/num7" />

        <Button
            android:id="@+id/num8"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/num8" />

        <Button
            android:id="@+id/num9"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/num9" />

        <Button
            android:id="@+id/decPoint"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/decPoint" />

        <Button
            android:id="@+id/clear"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"

            android:layout_gravity="fill"
            android:text="@string/clear" />

        <Button
            android:id="@+id/num0"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/num0" />

        <Button
            android:id="@+id/equals"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_row="3"
            android:layout_rowSpan="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/opEquals" />

        <Button
            android:id="@+id/backspace"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/backspace"
            android:layout_gravity="fill"  />

        <Spinner
            android:id="@+id/operation_spinner"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_rowSpan="1"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center_horizontal" />

    </GridLayout>


</LinearLayout>